--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=testing jest",
     "server": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "cross-env NODE_ENV=development node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
