--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "knee": "0.0.7",
     "knex": "^0.21.2",
     "knex-cleaner": "^1.3.0",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "cross-env": "^7.0.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
