--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^5.0.0",
     "cross-env": "^7.0.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
