--- a/package.json
+++ b/package.json
@@ -32,13 +32,11 @@
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "cross-env": "^7.0.2"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
     "jest": "^26.1.0",
-    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
   }
